# AIModelTemplate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
aimodel/: cli.py  passive.py  sentence_splitter.py  server.py  test_passive.py  test_pos.py  test_sentence_splitter.py  test_server.py
aimodel/data/: loader.py
aimodel/data/bush_gore/: non_passive.txt  passive.txt  raw.txt
aimodel/data/bush_kerry/: raw.txt
aimodel/models/bert/: tokenizer.json
aimodel/trainer/: __init__.py  bert_model.py  config.py  loader.py  test_loader.py  test_model.py  utils.py
hiring_branch/: cli.py  passive.py  pos.py  sentence_splitter.py  server.py  test_passive.py  test_pos.py  test_sentence_splitter.py  test_server.py
hiring_branch/data/: loader.py
hiring_branch/data/bush_gore/: non_passive.txt  passive.txt  raw.txt
hiring_branch/data/bush_kerry/: non_passive.txt  passive.txt  raw.txt
hiring_branch/models/bert/: config.json
hiring_branch/trainer/: __init__.py  bert_model.py  config.py  loader.py  test_loader.py  test_model.py  utils.py
