[tool.poetry]
name = "hiring_branch"
version = "0.1.0"
description = ""
authors = ["Pierre Snell <pierre.snell@botpress.com>"]

[tool.poetry.scripts]
cli = "hiring_branch.cli:cli"

[tool.poetry.dependencies]
python = "~3.9"
click = "^8.1.3"
rich = "^12.4.4"
fastapi = "^0.78.0"
spacy = "3.3.0"
en_core_web_lg = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.3.0/en_core_web_lg-3.3.0.tar.gz" }
pytorch-lightning = "^1.6.4"
attrs = "^21.4.0"
boto3 = "^1.24.24"
wandb = "^0.12.21"
uvicorn = "^0.18.2"
uvloop = "^0.16.0"
onnx = "^1.12.0"
onnxruntime = "^1.11.1"
optimum = "^1.2.3"
datasets = "^2.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
mypy = "^0.961"
isort = "^5.10.1"
pytest = "^7.1.2"
boto3-stubs = "^1.24.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
pretty = true
strict = true
color_output = true
plugins = ['pydantic.mypy']

install_types = true
non_interactive = true
incremental = true
show_column_numbers = true

explicit_package_bases = true
namespace_packages = true

show_error_codes = true
warn_unused_ignores = false

# txt_report = ./reports
cache_dir = '.mypy_cache'

check_untyped_defs = true
strict_optional = true
allow_redefinition = true
ignore_missing_imports = true

warn_return_any = true
warn_no_return = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

# disallow_untyped_defs = true
# disallow_any_generics = true
allow_subclassing_any = true

exclude = []


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.isort]
profile = 'black'
multi_line_output = 3

[tool.pytest.ini_options]
# testpaths = ["hiring_branch"]
filterwarnings = ["ignore::DeprecationWarning","ignore::UserWarning","ignore::FutureWarning"]
color = "yes"
code-highlight = "yes"
python_files = [ "test_*.py", "*_test.py",]
python_classes = [ "Test",]
python_functions = [ "test",]
strict_config = true
strict_markers = true

